tests/error/modifier_errors/optional_as_found.err
Error: Unsupported (at $FILE:7:9)
  | 
5 | @guppy
6 | def test() -> None:
7 |     with power(1) as x:
  |          ^^^^^^^^^^^^^ `as` expression is not supported

Guppy compilation failed due to 1 previous error
